# Deprecated_cpr_rviz_plugin

./: CMakeLists.txt  CPRMover4.urdf  CPRMover4.urdf.xacro~  CPRMover6.urdf  CPRMover6.urdf.xacro  CPRSRA.urdf.xacro  README.md  cpr_SRA.launch  cpr_SRA.rviz  cpr_mover4.launch  cpr_mover4.rviz  cpr_mover6.launch  cpr_mover6.rviz  manifest.xml  package.xml  plugin_description.xml  urdf.vcg
src/: teleop_panel.cpp  teleop_panel.h
