<?xml version="1.0"?>
<package>
  <name>cpr_rviz_plugin</name>
  <version>1.0.0</version>
  <description>Plugin that allows to operate the CPR Mover robots from RViz</description>

  <maintainer email="dinko.metalac@gmail.com">Dinko Osmankovic</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>class_loader</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
